fix: height issue on mobile, responsiveness of restaurant info list

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 /* CSS Document */
 
 html, body {
-  height: 100%;
-  max-width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body,td,th,p{
@@ -15,7 +15,6 @@ body,td,th,p{
 }
 body {
   display: grid;
-  height: 100%;
 	background-color: #fdfdfd;
   position:relative;
   grid-template-rows: 50px 1fr 50px;
@@ -49,10 +48,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
   display: grid;
   grid-row: 2;
-  grid-template-rows: 1.8fr 1.2fr;
+  grid-template-rows: 45vh 1fr;
 }
 #footer {
   grid-row: 3;
@@ -167,8 +165,12 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 #restaurants-list li {
+  display: inline;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
